second attempt at multi num logic

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
 
 </body>
 
-<script type='text/javascript' src='scripts/script.js'></script>
+<!-- <script type='text/javascript' src='scripts/script.js'></script> -->
+<script type='text/javascript' src='scripts/script-2.js'></script>
 
 </html>
