--- a/index.html
+++ b/index.html
@@ -46,7 +46,6 @@
 
 </body>
 
-<!-- <script type='text/javascript' src='scripts/script.js'></script> -->
-<script type='text/javascript' src='scripts/script-2.js'></script>
+<script type='text/javascript' src='scripts/script.js'></script>
 
 </html>
