added the latest calculation placeholder

--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
 <div id='container'>
 
     <!-- Display -->
-    <div id='display'></div>
+    <div id='displayBox'>
+        <div id='latestCalc'>[11111]</div>
+        <div id='display'></div>
+    </div>
 
     <div id='calculator'>
 
