added current calc logic and display text

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <!-- Display -->
     <div id='displayBox'>
-        <div id='latestCalc'>[11111]</div>
+        <div id='latestCalc'></div>
         <div id='display'></div>
     </div>
 
